# particles

./: .gitignore  Cargo.toml  wasm_build.sh
assets/: all_elements.kra  vector.mtl
src/: camera.rs  compute.rs  compute.wgsl  cursor.rs  cursor_shader.wgsl  draw_pass.rs  grid.rs  gui.rs  main.rs  poly3.rs  poly7.rs  renderer.rs  shader.wgsl  sim_params.rs  sub_render_pass.rs  vector_field_shader.wgsl
src/framework/: mod.rs
wasm_resources/: particles.html
